syntax = "proto3";
package dispatcherv3;

option go_package = "github.com/iotaledger/iota.go/v4;remotesigner";

service SignatureDispatcher {

  rpc SignMilestone (SignMilestoneRequest) returns (SignMilestoneResponse);

}

message SignMilestoneRequest {

  repeated bytes pubKeys = 1;
  bytes msEssence = 2;

}

message SignMilestoneResponse {

  repeated bytes signatures = 1;

}
